src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Branch</fullName>
        <description>Lead process for all the Branch Users</description>
        <isActive>false</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Call Center</fullName>
        <description>Lead process for all the Call Center Users</description>
        <isActive>false</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Lead process for all Users</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Abbreviation_Text__c</fullName>
        <formula>IF( ISPICKVAL(Brand__c, &quot;CFCU&quot;), $Setup.Brand__c.Abbreviation_Text_1__c ,$Setup.Brand__c.Abbreviation_Text_2__c  )</formula>
        <label>Abbreviation Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <label>Best Time To Call</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_of_Lead_creator__c</fullName>
        <label>Branch of Lead creator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>208</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>201</fullName>
                </value>
                <value>
                    <fullName>202</fullName>
                </value>
                <value>
                    <fullName>203</fullName>
                </value>
                <value>
                    <fullName>204</fullName>
                </value>
                <value>
                    <fullName>205</fullName>
                </value>
                <value>
                    <fullName>206</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>253</fullName>
                </value>
                <value>
                    <fullName>255</fullName>
                </value>
                <value>
                    <fullName>256</fullName>
                </value>
                <value>
                    <fullName>257</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Abbreviation__c</fullName>
        <label>Brand Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <label>Brand Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BC01</fullName>
                </value>
                <value>
                    <fullName>BC02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Text__c</fullName>
        <formula>IF( ISPICKVAL(Brand__c, &quot;CFCU&quot;),$Setup.Brand__c.Brand_Name_1__c,$Setup.Brand__c.Brand_Name_2__c  )</formula>
        <label>Brand Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFCU</fullName>
                </value>
                <value>
                    <fullName>Spectrum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Union_Name__c</fullName>
        <label>Credit Union Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episys_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with the &quot;LeadTrigger2 - Episys User ID&quot; trigger to bulk update existing records</description>
        <label>Episys Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Episys_User_ID__c</fullName>
        <label>Episys User ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Episys_User__c</fullName>
        <formula>CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Episys User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Value__c</fullName>
        <label>Estimate Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Create_Date__c</fullName>
        <label>Event Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <label>Event Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event – Oakland City Center Meet and Greet 12/06/17</fullName>
                </value>
                <value>
                    <fullName>Event – San Francisco Plaza Event 11/30/17</fullName>
                </value>
                <value>
                    <fullName>Event-Pascagoula-Contractor Safety Meeting-12/07/17</fullName>
                </value>
                <value>
                    <fullName>Event-Pascagoula-Brock New Hire Orientation-01/05/18</fullName>
                </value>
                <value>
                    <fullName>Event-Richmond-Pinole Valley Juniors Fundraiser-01/07/18</fullName>
                </value>
                <value>
                    <fullName>Event-El Paso-Contractor Visit-01/24/18</fullName>
                </value>
                <value>
                    <fullName>Event-1600 Smith Houston-Lunch and Learn-01/24/18</fullName>
                </value>
                <value>
                    <fullName>Event-Pascagoula-Chevron Retiree Luncheon-01/23/18</fullName>
                </value>
                <value>
                    <fullName>Event-Post Oak Houston-Briarpark Atrium Event-01/24/18</fullName>
                </value>
                <value>
                    <fullName>Event-El Paso-Lobby Event-02/02/18</fullName>
                </value>
                <value>
                    <fullName>Event-Post Oak Houston-Stewart Legacy Event-01/25/18</fullName>
                </value>
                <value>
                    <fullName>Event-Pascagoula-Meet and Greet-01/30/18</fullName>
                </value>
                <value>
                    <fullName>Event-Reston-Open House-01/31/18</fullName>
                </value>
                <value>
                    <fullName>Event-Houston Galleria-Lobby Event-02/07/18</fullName>
                </value>
                <value>
                    <fullName>Event-Pascagoula-Contractor New Hire Orientation-01/19/18</fullName>
                </value>
                <value>
                    <fullName>Event-Covington-Meet and Greet-01/31/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Helpdesk_Number__c</fullName>
        <description>Helpdesk number</description>
        <formula>IF( ISPICKVAL(Brand__c, &quot;CFCU&quot;) , $Setup.Brand__c.RE_Helpdesk_Telephone_Brand_1__c , $Setup.Brand__c.RE_Helpdesk_Telephone_Brand_2__c )</formula>
        <label>Helpdesk Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did you hear about us?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yahoo Ad</fullName>
                </value>
                <value>
                    <fullName>Google Ad</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_m_interested_in__c</fullName>
        <label>I&apos;m interested in</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By pass auto assignment rules and keep ownership of the Lead</description>
        <inlineHelpText>Keep ownership of the Lead and do not allow the assignment rules to route it to a group&apos;s queue.</inlineHelpText>
        <label>Keep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Type5__c</fullName>
        <label>Lead Type5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referrals</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Account</label>
        <referenceTo>Account_Details__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Branch__c</fullName>
        <label>Member Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Required__c</fullName>
        <formula>Person__c  &lt;&gt; null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Required_old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membership Required Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mortgage_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage Loan Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Mortgage_Loan_Officer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Hours</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>OpenHours__c.LeadId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OpenHours__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Over72_hours__c</fullName>
        <description>Number of hours since lead is created is over 72 hours or not.</description>
        <formula>(NOW()-CreatedDate)*24 &gt; 72</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Over 72 hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Over_30_days__c</fullName>
        <formula>IF((NOW()- CreatedDate)*24&gt;30*24 , True, False)</formula>
        <label>Over 30 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Subtype__c</fullName>
        <label>Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1st Mortgage</fullName>
                </value>
                <value>
                    <fullName>2nd Mortgage</fullName>
                </value>
                <value>
                    <fullName>90 Day Note-Unsecured</fullName>
                </value>
                <value>
                    <fullName>ARM 1/1</fullName>
                </value>
                <value>
                    <fullName>ARM 10/1</fullName>
                </value>
                <value>
                    <fullName>ARM 3/1</fullName>
                </value>
                <value>
                    <fullName>ARM 3/3</fullName>
                </value>
                <value>
                    <fullName>ARM 5/1</fullName>
                </value>
                <value>
                    <fullName>ARM 5/5</fullName>
                </value>
                <value>
                    <fullName>ARM 7/1</fullName>
                </value>
                <value>
                    <fullName>ATM Card</fullName>
                </value>
                <value>
                    <fullName>Auto - Liberty</fullName>
                </value>
                <value>
                    <fullName>Auto - New</fullName>
                </value>
                <value>
                    <fullName>Auto Refinance</fullName>
                </value>
                <value>
                    <fullName>Auto -Used</fullName>
                </value>
                <value>
                    <fullName>Balance Transfer</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Bridging</fullName>
                </value>
                <value>
                    <fullName>Business Development SEG</fullName>
                </value>
                <value>
                    <fullName>CFCU Company Guaranteed</fullName>
                </value>
                <value>
                    <fullName>CFCU Disaster Assistance-Level 3</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Credit Card in Repayment</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>Credit Protection</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
                <value>
                    <fullName>Direct Deposit</fullName>
                </value>
                <value>
                    <fullName>DPA Interest Only HELOC</fullName>
                </value>
                <value>
                    <fullName>DPA Texan HELOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts/Shares</fullName>
                </value>
                <value>
                    <fullName>Cards</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Vehicle Lending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <label>Property Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <label>Property City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <label>Property State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip__c</fullName>
        <label>Property Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>No Product Available</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>No Prospect/Mbr Deciding</fullName>
                </value>
                <value>
                    <fullName>App Online</fullName>
                </value>
                <value>
                    <fullName>App Completed</fullName>
                </value>
                <value>
                    <fullName>Follow Up Required</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Poor Referral</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Appointment Set Branch</fullName>
                </value>
                <value>
                    <fullName>Appointment Set Phone</fullName>
                </value>
                <value>
                    <fullName>Additional Follow-up Required</fullName>
                </value>
                <value>
                    <fullName>Contact Attempted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Contact_Details__c</fullName>
        <label>Support Contact Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>Unique ID for attaching the loan application (Marketing Cloud)</description>
        <label>UID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lead_number_link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id,  Lead_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__TestDate__c</fullName>
        <formula>(LastModifiedDate  -  CreatedDate)* 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>lead_number_link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Member_Account__c</columns>
        <columns>Open_Hours__c</columns>
        <columns>Product_Subtype__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Leads</fullName>
        <columns>lead_number_link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Product_Subtype__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Sub_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Event_Leads</fullName>
        <columns>lead_number_link__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Member_Account__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Product_Type__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>event</value>
        </filters>
        <label>All Event Leads</label>
    </listViews>
</CustomObject>